--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/nathanlippi/bitsplit_frontend",
   "dependencies": {
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "socket.io": "~0.9.16"
   }
 }
