To ignore all html and js files generated by jade

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
 node_modules
 *.tmp
+
+public/views/chat.html
+
+public/views/chat.js
+
+public/views/common_script.html
+
+public/views/common_script.js
+
+public/views/index.html
+
+public/views/index.js
+
+public/views/login.html
+
+public/views/login.js
+
+public/views/menu.html
+
+public/views/menu.js
+
+public/views/sidebar.html
+
+public/views/sidebar.js
+
+public/views/tpl.html
+
+public/views/tpl.js
