--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/nathanlippi/bitsplit_frontend",
   "dependencies": {
-    "express": "~3.4.8",
-    "socket.io": "~0.9.16",
-    "ejs": "^1.0.0"
+    "socket.io": "^1.0.6",
+    "ejs": "^1.0.0",
+    "express": "^4.6.1"
   }
 }
